HIVE-29208: Infinite loop while compiling query with filter predicate containing disjuncts on the same expression